--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto+Condensed&display=swap");
+body {
+  font-family: "Oswald", sans-serif;
+}
+
 @import "tailwindcss";
 @import "tw-animate-css";
 
