Working on Responsiveness and design

--- a/src/components/modules/tenant/banner/Banner.module.css
+++ b/src/components/modules/tenant/banner/Banner.module.css
@@ -1,5 +1,6 @@
 .banner {
-  background: url(../../../../app/assets/product-banner.png);
+  /* background: url(../../../../assets/product-banner.png);  */
+  background: url(../../../../assets/product-banner.png);
   height: 250px;
   background-size: cover;
   background-position: center;
